--- a/BibleCrossReference.html
+++ b/BibleCrossReference.html
@@ -72,10 +72,10 @@
 		/*padding:1px;*/
 		border-radius:2px;
 	}
-	a:hover {
+	/*a:hover {
 		color:#004080;
 		background-color:lightgray;
-	}
+	}*/
 	a.highlighted {
 		font-weight:bold;
 	}
@@ -134,10 +134,13 @@
 		word:'בראשית'
 	};
 	
-	const rightArrow = '&nbsp;&#10093;&nbsp;';
-	const leftArrow = '&nbsp;&#10092;&nbsp;';
-	const upArrow = '<div style="font-size:1.5em;">&nbsp;&#x2B06;&nbsp;</span>';
-	const downArrow = '<div style="font-size:1.5em;">&nbsp;&#x2B07;&nbsp;</span>';
+	const rightArrow = '<span style="font-size:1.5em;height:40px;">&nbsp;&#10093;&nbsp;</span>';
+	const leftArrow = '<span style="font-size:1.5em;height:40px;">&nbsp;&#10092;&nbsp;</span>';
+	const upArrow = '<span style="font-size:2em;height:40px;">&nbsp;&#x2B06;&nbsp;</span>';
+	const downArrow = '<span style="font-size:2em;height:40px;">&nbsp;&#x2B07;&nbsp;</span>';
+	
+	//const missingPlaceholder = '<center><span style="font-size:2em;">*</span></center>';
+	const missingPlaceholder = '<span style="font-size:1.5em;color:gray;" title="Can\'t find Strongs association">*</span>';
 
 	// building-block functions
 
@@ -507,6 +510,16 @@
 		}
 		return html;
 	}
+	
+	function verseAnalysis ( verseArray, book, chap, verse, word ) {
+		var html = '<table>';
+		for (let word of verseArray) {
+			//html += '<tr><td>'+wordLink( word )+'<br>'+gematria( word )[0]+'</td><td>'+strongsInfoVerse( word, book, chap, verse )+'</td></tr>';
+			html += '<tr><td>'+wordLink( word )+'</td><td>'+overlap( verseText( interlinear.translations[languageStrongs], book, chap, verse ), strongsList( word ) )+'</td><td>'+gematria( word )[0]+'</td></tr>';
+		}
+		html += '</table>';
+		return html;
+	}
 		
 	function wordInfo ( word ) {
 		//console.log( 'wordInfo: '+word );
@@ -531,7 +544,7 @@
 		html += '<table>';
 		if (something( interlinear.data[hash] ) && something( interlinear.data[hash][basic] )) {
 			for (var [code, codeObj] of Object.entries(interlinear.data[hash][basic])) {
-				if (code=='') code = '**';
+				if (code=='') code = missingPlaceholder;
 				html += '<tr><td style="font-size:0.7em;color:gray;vertical-align:top;border-right:solid 1px lightgray;" rowspan='+Object.entries(codeObj).length+'>'+code+'</td>';
 				for (const [book, bookObj] of Object.entries(codeObj)) {
 					html += '<td>'+codeToLang(book)+'</td><td>';
@@ -579,9 +592,9 @@
 		html += '<table>';
 		var lang = interlinear.translations[language];
 		let data = verseData( lang, book, chap, verse );
-		if (something(data.prevVerse.book)) html += '<tr><td class="highlighted">'+verseLink(data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse, upArrow)+'</td><td class="highlighted" style="color:gray;">'+data.prevVerse.chap+':'+data.prevVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse )+'</td></tr>';
+		if (something(data.prevVerse.book)) html += '<tr><td class="highlighted"><center>'+verseLink(data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse, upArrow)+'</center></td><td class="highlighted" style="color:gray;">'+data.prevVerse.chap+':'+data.prevVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse )+'</td></tr>';
 		html += '<tr><td class="highlighted">'+codeToLang(book)+'</td><td class="highlighted">'+chap+':'+verse+'</td><td class="highlighted" style="">'+verseText( lang, book, chap, verse )+'</td></tr>';
-		if (something(data.nextVerse.book)) html += '<tr><td class="highlighted">'+verseLink(data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse, downArrow)+'</td><td class="highlighted" style="color:gray;">'+data.nextVerse.chap+':'+data.nextVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse )+'</td></tr>';
+		if (something(data.nextVerse.book)) html += '<tr><td class="highlighted"><center>'+verseLink(data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse, downArrow)+'</center></td><td class="highlighted" style="color:gray;">'+data.nextVerse.chap+':'+data.nextVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse )+'</td></tr>';
 		html += '</table>';
 		
 		// original text
@@ -597,14 +610,9 @@
 			html += '</table>';
 			
 			// each word with Strongs info
-			html += '<table>';
-			for (let word of verseArray) {
-				//html += '<tr><td>'+wordLink( word )+'<br>'+gematria( word )[0]+'</td><td>'+strongsInfoVerse( word, book, chap, verse )+'</td></tr>';
-				html += '<tr><td>'+wordLink( word )+'</td><td>'+overlap( 'verse text: '+verseText( interlinear.translations[languageStrongs], book, chap, verse ), strongsList( word ) )+'</td><td>'+gematria( word )[0]+'</td></tr>';
-			}
-			html += '</table>';
+			html += verseAnalysis( verseArray, book, chap, verse, word );
 		} else {
-			html += '[ERROR: verse not found!]';
+			html += missingPlaceholder;
 		}
 		return html;
 	}
@@ -764,15 +772,19 @@
 	function overlap ( verse, strongsList ) {
 		//console.log( verse );
 		var verseArray = alphaText(verse);
-		console.log( verseArray );
-		console.log( strongsList );
+		//console.log( verseArray );
+		//console.log( strongsList );
 		var overlapSet = new Set();
 		for (let verseWord of Object.values(verseArray)) {
 			for (let strongsWord of Object.values(strongsList)) {
 				//console.log( "comparing: "+strongsWord+" <-> "+verseWord );
 				if (verseWord=='') continue;
-				if (strongsWord.toLowerCase().indexOf(verseWord.toLowerCase())==0) {
-					overlapSet.add( verseWord );
+				let strongsLower = strongsWord.toLowerCase();
+				let verseLower = verseWord.toLowerCase();
+				if (verseLower.length>3 && strongsLower.length>3) {
+					if (strongsLower.indexOf(verseLower)==0 || verseLower.indexOf(strongsLower)==0) overlapSet.add( verseWord );
+				} else {
+					if (strongsLower == verseLower) overlapSet.add( verseWord );
 				}
 			}
 		}
@@ -818,6 +830,7 @@
 		language = getVal( "lang" );
 		
 		changeBookSelect();
+		setVal( "book", state.book );
 		
 		refresh();
 	}
@@ -857,6 +870,9 @@
 	getId( "verseDivWrapper" ).style.visibility = 'visible';
 	getId( "wordDivWrapper" ).style.visibility = 'visible';
 	getId( "loadingDiv" ).style.visibility = 'hidden';
+	
+	// TODO: URL modification for back/forward operation (see https://stackoverflow.com/questions/824349/how-do-i-modify-the-url-without-reloading-the-page)
+	console.log( location );
 
 </script>
 </body>
